# a2a-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  server.py  spec.md
agents/: __init__.py
agents/orchestrator/: __init__.py  a2a_tools.py  agent.py  agentcore_app.py  prompts.py
agents/salesforce/: __init__.py  a2a_server.py  agent.py  agentcore_app.py  prompts.py
agents/servicenow/: __init__.py  a2a_server.py  agent.py  agentcore_app.py  prompts.py
docs/: ARCHITECTURE.md  PROGRESS.md  WHAT_IS_BUILT.md
frontend/: app.js  index.html  styles.css
scripts/: deploy_all.sh  local_test.py  teardown.sh
shared/: __init__.py  config.py
shared/mock_data/: __init__.py  salesforce.json  servicenow.json
